Fix errors with nav font size on smaller screens and large image in toasts

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -111,7 +111,79 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
-/* Custom CSS */
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
+/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
+.arrow-up {
+    width: 0; 
+    height: 0; 
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent; 
+    border-bottom: 10px solid black;
+    position: absolute;
+    top: -10px;
+    right: 36px;
+}
+
+/* Convenience classes - colors copied from Bootstrap */
+.arrow-primary {
+    border-bottom-color: #007bff !important;
+}
+
+.arrow-secondary {
+    border-bottom-color: #6c757d !important;
+}
+
+.arrow-success {
+    border-bottom-color: #28a745 !important;
+}
+
+.arrow-danger {
+    border-bottom-color: #dc3545 !important;
+}
+
+.arrow-warning {
+    border-bottom-color: #ffc107 !important;
+}
+
+.arrow-info {
+    border-bottom-color: #17a2b8 !important;
+}
+
+.arrow-light {
+    border-bottom-color: #f8f9fa !important;
+}
+
+.arrow-dark {
+    border-bottom-color: #343a40 !important;
+}
+
+.bag-notification-wrapper {
+    height: 100px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.image-mini {
+    max-height: 100px;
+}
+
+/* ----------------------Custom CSS */
 nav {
     background-color: #f2eadf;
 }
@@ -347,5 +419,12 @@ hr {
 @media (max-width: 600px) {
     .banner-content {
         font-size: 14px;  /* Reduce font size on mobile for better fit */
+    }
+}
+
+/* For Nav on small screens */
+@media (max-width: 400px) {
+    .small-nav-text-mobile {
+        font-size: 10px !important;
     }
 }
